test: fix statement service test assertions to match actual validation order
- fix CustomerStatementServiceTest: duplicate check now validates source data first
- fix FreightStatementServiceTest: remove broken responseDetail test, fix message assertions
- fix SupplierStatementServiceTest: fix duplicate check error message
- fix CompanySettingServiceTest: pass SnowflakeIdGenerator instead of null to constructor